--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p class="text-3xl">footer to do</p>
+<footer class="w-full py-5 px-6 text-white shadow-md backdrop-blur-md bg-[#0e0e24] bg-opacity-95 z-50">
+    <div class="max-w-7xl mx-auto px-4 text-center">
+        <p class="text-sm">&copy; 2025 Hugo Martín Sánchez. Proyecto Fin de Grado.</p>
+        <p class="text-xs mt-1 text-gray-500">Creado con Angular y Tailwind CSS</p>
+    </div>
+</footer>
