--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,7 +5,7 @@
             <img src="logo-musichub.png" alt="MusicHub Logo" class="h-12 md:h-16 object-contain" />
         </a>
         <div class="w-full max-w-sm ml-4">
-            <app-search-bar (search)="onSearch($event)"></app-search-bar>
+            <app-live-search (search)="onSearch($event)"></app-live-search>
         </div>
     </div>
 </header>
