--- a/src/app/shared/components/preview-button/preview-button.component.html
+++ b/src/app/shared/components/preview-button/preview-button.component.html
@@ -1,14 +1,15 @@
-<button (click)="togglePlayback()"
-    class="bg-orange-500 hover:bg-orange-600 text-white rounded-full p-3 shadow-md transition-all duration-300 flex items-center justify-center"
+<button (click)="onButtonClick($event)"
+    class="bg-orange-500 hover:bg-orange-600 text-white rounded-full p-3 shadow-md transition-all duration-300 flex items-center justify-center relative z-10"
     [title]="isPlaying() ? 'Pausar preview' : 'Reproducir preview'">
+
     @if (!isPlaying()) {
+    <!-- Play icon -->
     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 transform scale-x-110" fill="currentColor"
         viewBox="0 0 24 24">
         <path d="M8 5v14l11-7z" />
     </svg>
-    }
-
-    @if (isPlaying()) {
+    } @else {
+    <!-- Pause icon -->
     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="currentColor" viewBox="0 0 24 24">
         <g>
             <rect x="6" y="5" width="4" height="14" rx="1" />
