--- a/src/app/shared/components/main-card/main-card.component.html
+++ b/src/app/shared/components/main-card/main-card.component.html
@@ -1,6 +1,10 @@
-<div class="group p-6 rounded-xl bg-[#1f1f3a] hover:bg-[#2a2a4d] transition duration-300 shadow-lg">
-    <h3 class="text-xl font-semibold mb-2 transition" [ngClass]="'group-hover:text-' + hoverColor">
+<div class="group p-6 rounded-xl bg-[#1f1f3a] hover:bg-[#2a2a4d] transition duration-300 shadow-lg cursor-pointer"
+    (click)="handleClick()">
+    <img *ngIf="image" [src]="image" alt="{{ title }}" class="rounded-xl mb-4 w-full h-40 object-cover shadow-md" />
+
+    <h3 class="text-xl font-semibold mb-2 transition" [ngClass]="'group-hover:text-'+hoverColor">
         {{ title }}
     </h3>
+
     <p class="text-gray-400">{{ description }}</p>
 </div>
